--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Component library made with React.js.",
   "main": "index.ts",
   "scripts": {
-    "test": "exit 0"
+    "test": "exit 0",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "repository": {
     "type": "git",
@@ -21,9 +23,19 @@
   },
   "homepage": "https://github.com/akhiljozph/maj-ui#readme",
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.6.1",
+    "@storybook/addon-essentials": "^8.2.7",
+    "@storybook/addon-interactions": "^8.2.7",
+    "@storybook/addon-links": "^8.2.7",
+    "@storybook/addon-onboarding": "^8.2.7",
+    "@storybook/blocks": "^8.2.7",
+    "@storybook/react": "^8.2.7",
+    "@storybook/react-vite": "^8.2.7",
+    "@storybook/test": "^8.2.7",
     "@types/react": "^18.3.3",
     "react": "^18.3.1",
     "sass": "^1.77.8",
+    "storybook": "^8.2.7",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4"
   }
