--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "maj-ui",
   "version": "0.0.0",
   "description": "Component library made with React.js.",
-  "main": "index.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "exit 0",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook": "storybook dev -p 8090",
+    "build:storybook": "storybook build",
+    "build:rollup": "rollup -c --bundleConfigAsCjs"
   },
   "repository": {
     "type": "git",
@@ -24,6 +27,10 @@
   "homepage": "https://github.com/akhiljozph/maj-ui#readme",
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@storybook/addon-essentials": "^8.2.7",
     "@storybook/addon-interactions": "^8.2.7",
     "@storybook/addon-links": "^8.2.7",
@@ -33,7 +40,12 @@
     "@storybook/react-vite": "^8.2.7",
     "@storybook/test": "^8.2.7",
     "@types/react": "^18.3.3",
+    "@types/rollup-plugin-peer-deps-external": "^2.2.5",
     "react": "^18.3.1",
+    "rollup": "^4.19.2",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.77.8",
     "storybook": "^8.2.7",
     "tslib": "^2.6.3",
