--- a/package.json
+++ b/package.json
@@ -1,40 +1,29 @@
 {
   "name": "maj-ui",
-  "version": "0.0.0",
-  "description": "Component library made with React.js.",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
-  "scripts": {
-    "build:rollup": "rollup -c --bundleConfigAsCjs",
-    "build:storybook": "storybook build",
-    "storybook": "storybook dev -p 8090",
-    "test": "exit 0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/akhiljozph/maj-ui.git"
-  },
-  "keywords": [
-    "tsc",
-    "react"
+  "files": [
+    "/dist"
   ],
-  "author": "akhiljoseph",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/akhiljozph/maj-ui/issues"
+  "scripts": {
+    "build": "tsc && vite build",
+    "format": "prettier --write --parser typescript '**/*.{ts,tsx}'",
+    "lint": "eslint . --ext .ts,.tsx --ignore-path .gitignore --fix",
+    "test": "vitest run",
+    "test-watch": "vitest",
+    "test:ui": "vitest --ui",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
-  "homepage": "https://github.com/akhiljozph/maj-ui#readme",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
     "@chromatic-com/storybook": "^1.6.1",
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
     "@storybook/addon-essentials": "^8.2.7",
     "@storybook/addon-interactions": "^8.2.7",
     "@storybook/addon-links": "^8.2.7",
@@ -43,26 +32,28 @@
     "@storybook/react": "^8.2.7",
     "@storybook/react-vite": "^8.2.7",
     "@storybook/test": "^8.2.7",
+    "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
-    "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
-    "@types/rollup-plugin-peer-deps-external": "^2.2.5",
-    "babel-jest": "^29.7.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "react": "^18.3.1",
-    "rollup": "^4.19.2",
-    "rollup-plugin-dts": "^6.1.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.2",
-    "sass": "^1.77.8",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin": "^1.0.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-storybook": "^0.8.0",
+    "jsdom": "^24.1.1",
+    "prettier": "^3.3.3",
+    "react-hooks": "^1.0.1",
     "storybook": "^8.2.7",
-    "tslib": "^2.6.3",
-    "typescript": "^5.5.4"
+    "styled-components": "^6.1.12",
+    "typescript": "^5.5.4",
+    "vite": "^5.3.5",
+    "vite-plugin-dts": "^4.0.0-beta.2",
+    "vitest": "^2.0.5"
   },
   "peerDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^18.3.1"
   }
 }
