--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     },
     "include": ["src"],
     "exclude": [
-      "src/**/__docs__","src/**/__test__"
+      "src/**/*.stories.tsx","src/**/*.test.tsx"
     ]
 }
