--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsdom": "^24.1.1",
     "prettier": "^3.3.3",
     "react-hooks": "^1.0.1",
+    "sass": "^1.77.8",
     "storybook": "^8.2.7",
     "styled-components": "^6.1.12",
     "typescript": "^5.5.4",
