--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "storybook": "storybook dev -p 8090",
     "build-storybook": "storybook build"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run format"
+    }
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -42,6 +47,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-storybook": "^0.8.0",
+    "husky": "^9.1.5",
     "jsdom": "^24.1.1",
     "prettier": "^3.3.3",
     "react-hooks": "^1.0.1",
