MAJ-53 - Logs removed.

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "format": "prettier --write --parser typescript '**/*.{ts,tsx}'",
     "lint": "eslint . --ext .ts,.tsx --ignore-path .gitignore --fix",
     "test": "vitest run",
-    "test-watch": "vitest",
+    "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "storybook": "storybook dev -p 8090",
-    "build-storybook": "storybook build"
+    "build:storybook": "storybook build"
   },
   "husky": {
     "hooks": {
