--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,12 @@
 {
     "printWidth": 100,
-    "tabWidth": 6
+    "tabWidth": 4,
+    "endOfLine": "lf",
+    "semi": true,
+    "singleQuote": false,
+    "jsxSingleQuote": false,
+    "bracketSpacing": true,
+    "bracketSameLine": false,
+    "arrowParens": "always",
+    "singleAttributePerLine": true
 }
