--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "storybook": "storybook dev -p 8090",
-    "build:storybook": "storybook build"
+    "build:storybook": "storybook build",
+    "prepare": "husky"
   },
   "husky": {
     "hooks": {
@@ -46,8 +47,9 @@
     "eslint-plugin": "^1.0.1",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-storybook": "^0.8.0",
-    "husky": "^9.1.5",
+    "husky": "^9.1.6",
     "jsdom": "^24.1.1",
     "prettier": "^3.3.3",
     "react-hooks": "^1.0.1",
