--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - run: npm ci
-      - run: npm run build-storybook
+      - run: npm run build:storybook
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
