--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "license": "ISC",
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
+    "@eslint/js": "^9.17.0",
     "@storybook/addon-essentials": "^8.2.7",
     "@storybook/addon-interactions": "^8.2.7",
     "@storybook/addon-links": "^8.2.7",
@@ -42,13 +43,14 @@
     "@types/react": "^18.3.3",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin": "^1.0.1",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-storybook": "^0.8.0",
+    "globals": "^15.14.0",
     "husky": "^9.1.6",
     "jsdom": "^24.1.1",
     "prettier": "^3.3.3",
@@ -56,6 +58,7 @@
     "sass": "^1.77.8",
     "storybook": "^8.2.7",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.19.1",
     "vite": "^5.3.5",
     "vite-plugin-dts": "^4.0.0-beta.2",
     "vitest": "^2.0.5"
