--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "react": "^18.3.1"
   },
   "dependencies": {
+    "@storybook/manager-api": "^8.6.14",
+    "@storybook/theming": "^8.6.14",
     "@vitest/ui": "^2.0.5"
   }
 }
